fix the youtube video z-index on the iframe

--- a/src/_component/header/header.scss
+++ b/src/_component/header/header.scss
@@ -14,6 +14,7 @@
     left: 0;
     right: 0;
     background-color: $color-mine-shaft;
+    z-index: 1;
 }
 
 .header__name {
