--- a/src/_component/layout/layout.scss
+++ b/src/_component/layout/layout.scss
@@ -53,7 +53,7 @@ hr {
         position: absolute;
         top: 0;
         left: 0;
-        z-index: -1;
+        // z-index: -1;
     }
 }
 
